src/objects/P2P_Campaign__c.object
<CustomObject>
    <description>P2P Campaigns are organizational campaigns to which users can set up their P2P Personal Campaigns.</description>
    <fields>
        <fullName>Amount_Raised__c</fullName>
        <label>Amount Raised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <inlineHelpText>Fundraising campaigns can have either goal type, whereas general form campaigns can only have Submission Count as the goal type.</inlineHelpText>
        <label>Goal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission Count</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Node_ID__c</fullName>
        <label>Node ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Submission__c</fullName>
        <label>Number of Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_donations__c</fullName>
        <label>Number of donations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2P_Campaign_URL__c</fullName>
        <label>P2P Campaign URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P2P_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P2P Category</label>
        <referenceTo>P2P_Category__c</referenceTo>
        <relationshipLabel>P2P Campaigns</relationshipLabel>
        <relationshipName>P2P_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Goal__c</fullName>
        <label>Submission Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Donation__c</fullName>
        <label>Suggested Donation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>P2P Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>P2P Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P2P Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>